# blender_batch_render

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  turbo.json
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.vue
apps/web/src/components/: NetworkInfo.vue  PreviewPanel.vue  SettingsPanel.vue  StatsBar.vue  SystemInfo.vue  TerminalConsole.vue
apps/web/src/composables/: useSettings.ts  useTerminal.ts
scripts/: build-frontend.bat  dev.bat  dev.ps1  dev.sh  install-service.bat  remove-service.bat  restart.bat  setup.bat  start.bat  stop.bat
server/: engine.py  main.py  package.json  preview.py  pyproject.toml  requirements.txt  run_production.py
