[project]
name = "blender-batch-render-server"
version = "1.0.0"
description = "Blender Batch Render Tool - Backend Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "psutil>=6.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = []
